# fuckyour.email

./: .dockerignore  Dockerfile  fly.toml  justfile  manage.py  pyproject.toml
fuckyour/email/: apps.py  urls.py  views.py
fuckyour/email/templates/fye/: base.html  inbox.html  message.html
fuckyouremail/: asgi.py  settings.py  urls.py  wsgi.py
lambda/: forward_email.py
